# fds-ai-advisor

./: .env.example  .gitignore  Dockerfile.asterisk  Dockerfile.fds  README.md  docker-compose.fds.yml  pyproject.toml  run.sh  setup.sh  다이어그램.md
asterisk/etc/asterisk/: asterisk.conf  extensions.conf  manager.conf  modules.conf  rtp.conf  sip.conf
src/: app.py  caller.py  fds_agi.py  fds_detailed_final.py  fds_detector.py  fds_fraud_advisor_prompt.py  fraud_suspicion_prompt_detailed.py  requirements_supertonic.txt
src/templates/: index.html
