[project]
name = "fds-ai-advisor"
version = "1.0.0"
description = "FDS AI 상담사 - 부정거래 의심 자동 전화 상담 시스템"
requires-python = ">=3.12,<3.13"

dependencies = [
    "openai-whisper>=20240314,<20260101",
    "openai>=1.30.0,<2.0.0",
    "supertonic>=1.3.0,<2.0.0",
    "scipy>=1.12.0,<2.0.0",
    "numpy>=1.26.0,<3.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "flask>=3.0.0,<4.0.0",
]

[tool.uv]
# uv sync 실행 시 Python 3.12 자동 설치 및 .venv 생성
# 실행: uv run python src/app.py
